<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/layout_nombre"
            android:textColorHint="@color/teal"
            android:id="@+id/nombreLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombreInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/myrect"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/LayoutSetView"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textDate"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15dp"
                />
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:id="@+id/datePicker"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginHorizontal="5dp"
                    android:id="@+id/cancelButton"
                    android:onClick="ActivateCancelButton"


                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ok"
                    android:layout_marginHorizontal="5dp"
                    android:id="@+id/affimationButton"
                    android:onClick="ActivateOkButton"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/layout_telefono"
            android:textColorHint="@color/teal"
            android:id="@+id/telefonoLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/telefonoInput"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/layout_email"
            android:textColorHint="@color/teal"
            android:id="@+id/emailLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailInput"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/layout_description"
            android:textColorHint="@color/teal"
            android:id="@+id/descriptionLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionInput"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/buttonNext"
            android:backgroundTint="@color/orange"
            android:layout_marginHorizontal="120dp"
            android:textColor="@color/teal"
            android:layout_marginTop="10dp"
            android:onClick="ActivateSiguienteButton"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>